# docs/swagger.json
@@ -9,11 +9,6 @@
     "paths": {
         "/api/v1/books/": {
             "get": {
-                "security": [
-                    {
-                        "AuthKey": []
-                    }
-                ],
                 "tags": [
                     "book"
                 ],
@@ -38,11 +33,6 @@
                 }
             },
             "post": {
-                "security": [
-                    {
-                        "AuthKey": []
-                    }
-                ],
                 "tags": [
                     "book"
                 ],
@@ -80,11 +70,6 @@
         },
         "/api/v1/books/{id}": {
             "get": {
-                "security": [
-                    {
-                        "AuthKey": []
-                    }
-                ],
                 "description": "get book by id",
                 "tags": [
                     "book"
@@ -134,11 +119,6 @@
                 }
             },
             "put": {
-                "security": [
-                    {
-                        "AuthKey": []
-                    }
-                ],
                 "tags": [
                     "book"
                 ],
@@ -181,11 +161,6 @@
                 }
             },
             "delete": {
-                "security": [
-                    {
-                        "AuthKey": []
-                    }
-                ],
                 "tags": [
                     "book"
                 ],
@@ -212,68 +187,6 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/types.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/users/sign-in": {
-            "post": {
-                "tags": [
-                    "auth"
-                ],
-                "summary": "SignIn",
-                "operationId": "sign-in",
-                "parameters": [
-                    {
-                        "description": " ",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.SignInInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/types.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/users/sign-up": {
-            "post": {
-                "tags": [
-                    "auth"
-                ],
-                "summary": "SignUp",
-                "operationId": "sign-up",
-                "parameters": [
-                    {
-                        "description": " ",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.SignUpInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/types.ErrorResponse"
                         }
@@ -350,47 +263,6 @@
                     "type": "string"
                 }
             }
-        },
-        "types.SignInInput": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "types.SignUpInput": {
-            "type": "object",
-            "required": [
-                "email",
-                "name",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        }
-    },
-    "securityDefinitions": {
-        "AuthKey": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
         }
     }
 }
